# Stellar-MarketPay--frock

./: .gitleaks.toml
.github/workflows/: deploy-production.yml  deploy-staging.yml  fuzz.yml  security-scan.yml
backend/: jest.setup.js  package-lock.json  package.json
backend/src/: server.js
backend/src/db/: pool.js  schema.sql
backend/src/routes/: auth.js  profiles.js  savedSearches.js  skills.js
backend/src/services/: aiService.test.js  daoService.test.js  developerService.test.js  escrowService.js  indexerService.js  jobService.js  notificationService.js  profileService.js  referralService.test.js
backend/src/testUtils/: pgMock.js
contracts/marketpay-contract/fuzz/: Cargo.toml
contracts/marketpay-contract/fuzz/fuzz_targets/: fuzz_create_escrow.rs  fuzz_release_escrow.rs  fuzz_timeout_refund.rs
frontend/: middleware.ts  next.config.mjs  package-lock.json  package.json
frontend/components/: JobStatusTimeline.tsx  PostJobForm.tsx
frontend/lib/: api.ts  csp.ts  stellar.ts
frontend/pages/: _app.tsx  _document.tsx
frontend/utils/: types.ts
infra/: README.md
